Add link for moderator login to navbar

--- a/templates/wrapper.html
+++ b/templates/wrapper.html
@@ -15,8 +15,11 @@
         <nav>
           <div class="padded">
             <div class="nav-content">
-              <a class="nav-logo" href="{{ url_for('home')}}">
+              <a class="nav-link" href="{{ url_for('home')}}">
                 <h1>NYU Study Spots</h1>
+              </a>
+              <a class="nav-link" href="{{ url_for('moderator_login')}}">
+                <span class="material-symbols-outlined nav-icon">login</span>
               </a>
             </div>
           </div>
