--- a/static/css/wrapper.css
+++ b/static/css/wrapper.css
@@ -45,7 +45,7 @@ nav {
   box-shadow: 0 0 2rem rgb(0 0 0 / 10%);
 }
 
-.nav-logo, .nav-logo:hover, .nav-logo:active, .bottom-nav-icon, .bottom-nav-icon:hover, .bottom-nav-icon:active {
+.nav-link, .nav-link:hover, .nav-link:active, .bottom-nav-icon, .bottom-nav-icon:hover, .bottom-nav-icon:active {
   color: #000;
   text-decoration: none;
 }
