--- a/templates/moderator_login.html
+++ b/templates/moderator_login.html
@@ -9,7 +9,8 @@
   rel="stylesheet"
   href="../static/css/moderator_login.css"
   href="{{ url_for('static', filename='css/moderator_login.css') }}"
-/>
+  >
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Abel">
 
 </head>
 <body>
