--- a/templates/detail_moderator.html
+++ b/templates/detail_moderator.html
@@ -20,13 +20,14 @@
     <img src="../images/study-spot-800.jpeg" class="img-fluid" alt="...">
     <div class="container text-left">
         <div class="row align-items-start">
-            <div class="col">
+            <div class="col-5">
                 ★★★★✩
             </div>
-            <div class="col">
-
+            <div class="col-7 ">
+                <form action="" method="post">
+                    <button name="remove" value="removeStudySpot">remove this study spot</button>
+                </form>
             </div>
-
         </div>
         <div class="row align-items-center">
             <div class="col">
@@ -41,15 +42,11 @@
     </div>
     <div class="container text-center">
         <div class="row align-items-start">
-            <div class="col ">
-                <form action="home.html" method="get">
-                    <button class = "border border-1" name="addReview">add review</button> 
-                </form>  
+            <div class="col border border-2">
+                add review
             </div>
-            <div class="col ">
-                <form action="home.html" method="get">
-                    <button class = "border border-1" name="addTag">add tag</button> 
-                </form> 
+            <div class="col border border-2">
+                add tag
             </div>
         </div>
 
@@ -68,16 +65,10 @@
             </div>
         </div>
         <div class="row align-items-start">
-            <div class="col-3">
+            <div class="col">
                 <form action="" method="post">
-                    <button class = "border border-1" name="like" value="like">👍</button> 10
-                </form>  
-            </div>
-            <div class="col-3">
-                <form action="" method="post">
-                    <button class = "border border-1" name="like" value="like">👎</button> 2
-                </form>  
-                 
+                    <button name="remove" value="remove">remove</button>
+                </form>
             </div>
         </div>
     </div>
@@ -95,11 +86,10 @@
             </div>
         </div>
         <div class="row align-items-start">
-            <div class="col-2">
-                👍 10
-            </div>
-            <div class="col-2">
-                👎 2
+            <div class="col">
+                <form action="" method="post">
+                    <button name="remove" value="remove">remove</button>
+                </form>
             </div>
         </div>
     </div>
