implement the basic flask backend

--- a/templates/add_spot.html
+++ b/templates/add_spot.html
@@ -1,6 +1,4 @@
-<!-- {% extends 'wrapper.html' %}
-
-{% block container %} -->
+{% block container %}
 
 <!DOCTYPE html>
 <html>
@@ -66,4 +64,4 @@
     </div>
   </body>
 </html>
-<!-- {% endblock %} -->
+{% endblock %}
