--- a/templates/detail.html
+++ b/templates/detail.html
@@ -1,6 +1,6 @@
-<!-- {% extends 'wrapper.html' %}
 
-{% block container %} -->
+
+{% block container %} 
 <!doctype html>
 <html lang="en">
 
@@ -107,4 +107,4 @@
 
 </html>
 
-<!-- {% endblock %} -->
+{% endblock %}
