add more routes

--- a/templates/search_page.html
+++ b/templates/search_page.html
@@ -1,3 +1,6 @@
+{% extends "wrapper.html" %}
+{% block container %}
+<!DOCTYPE html>
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -17,3 +20,4 @@
     </div>
   </body> 
 </html>
+{% endblock %}
