--- a/static/css/home.css
+++ b/static/css/home.css
@@ -2,7 +2,7 @@
     width: 95%;
     margin-left: auto;
     margin-right: auto;
-    padding: 5rem 0;
+    padding-bottom: 2rem;
 }
 
 .spot-grid-container {
@@ -10,16 +10,16 @@
     justify-content: space-around;
     align-items: center;
     flex-wrap: wrap;
-    row-gap: 3rem;
+    row-gap: 1.5rem;
 }
 
 .card-placeholder {
-    width: 350px;
+    width: 150px;
     height: 0;
 }
 
 .spot-card {
-    padding: 1.5rem;
+    padding: 1rem 1.5rem;
     border-radius: 15px;
     box-shadow: 0 0 2rem rgb(0 0 0 / 10%);
 }
@@ -32,7 +32,7 @@
 .image-container {
     position: relative;
     width: 100%;
-    max-width: 400px;
+    max-width: 150px;
 }
 
 .image-container > a {
@@ -50,15 +50,15 @@
 
 .spot-card-image {
     object-fit: cover;
-    width: 350px;
-    height: 350px;
+    width: 100px;
+    height: 100px;
     margin: .5rem 0;
 }
 
 .study-card-name, .study-spot-location {
-    font-size: 2.5rem;
+    font-size: .9rem;
     font-family: sans-serif;
-    width: 350px;
+    width: 100px;
     font-weight: bold;
     overflow: hidden;
     white-space: nowrap;
@@ -66,10 +66,10 @@
 }
 
 .study-spot-location {
-    font-size: 2rem;
+    font-size: .8rem;
     font-weight: normal;
 }
 
 .location-icon{
-    font-size: 2.5rem !important;
+    font-size: .7rem !important;
 }
