modified form tag in search.html with methods attribute & setup a route to handle http post request from the search form

--- a/templates/search_page.html
+++ b/templates/search_page.html
@@ -10,9 +10,20 @@
   </head>
   <body>
     <div class="container">
-      <form>
+      <form method="POST" action="{{ url_for('search')}}">
         <i class="fa-solid fa-magnifying-glass"></i>
-        <input type="text" placeholder="Enter keyword">
+        <input type="text" id = "fsearchitem" name = "fsearchitem" placeholder="Enter keyword">
+        <select name="flocation" id="flocation">
+          <option value="On campus">On Campus</option>
+          <option value="Off campus">Off Campus</option>
+        </select>
+        <select name="ftype" id="ftype">
+          <option value="Academic building">Academic Building</option>
+          <option value="Cafe/Restaurant">Cafe/Restaurant</option>
+          <option value="Library">Library</option>
+          <option value="Non-restaurant store">Non-Restaurant Store</option>
+          <option value="Miscellaneous">Miscellaneous</option>
+        </select>
         <button type="submit">Search</button>
       </form>
     </div>
