--- a/static/css/search_page.css
+++ b/static/css/search_page.css
@@ -54,3 +54,15 @@ align-self: center;
 padding: 10px 20px;
 color: grey;
 }
+
+form #flocation{
+    border: none;
+    outline: none;
+    color: purple;
+}
+
+form #ftype{
+    border: none;
+    outline: none;
+    color: purple;
+}
