added in routes to handle post requests for adding spots and searching spots

--- a/templates/add_spot.html
+++ b/templates/add_spot.html
@@ -16,7 +16,7 @@
         <h2>Add a new study spot:</h2>
       </header>
       <main>
-        <form method="POST" action="{{ url_for('create_post')}}">
+        <form method="POST" action="{{ url_for('add_spot')}}">
           <p class="field">Name/Title for the study spot: <input type="text" id="fitem" name="fitem" /><br /></p>
           <p>Address: <input type="text" id="faddress" name="faddress" /><br /></p>
           <p>Location:
