--- a/templates/search_page.html
+++ b/templates/search_page.html
@@ -12,12 +12,9 @@
     <div class="container">
       <form method="POST" action="{{ url_for('search')}}">
         <i class="fa-solid fa-magnifying-glass"></i>
-        <input type="text" id = "fsearchitem" name = "fsearchitem" placeholder="Enter keyword">
-        <select name="flocation" id="flocation">
-          <option value="On campus">On Campus</option>
-          <option value="Off campus">Off Campus</option>
-        </select>
+        <input type="text" id = "fspotname" name = "fspotname" placeholder="Enter keyword">
         <select name="ftype" id="ftype">
+          <option value='---'>---</option>
           <option value="Academic building">Academic Building</option>
           <option value="Cafe/Restaurant">Cafe/Restaurant</option>
           <option value="Library">Library</option>
