--- a/templates/home.html
+++ b/templates/home.html
@@ -5,62 +5,64 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 <div class="home-container">
     <div class="spot-grid-container">
-        <div class="spot-card">
-            <a href="">
+        {% for doc in docs %}
+            <div class="spot-card">
+                <a href="">
+                    <!-- This is also a placeholder until backend implementation -->
+                    <img class="spot-card-image" src="../images/simple-task-board.png"/>
+                    <div class="study-card-name">{{doc.name}}</div>
+                    <div class="study-spot-location"><span class="material-symbols-outlined location-icon">location_on</span>{{doc.location}}</div>
+                </a>
+            </div>
+        {%endfor%}
+        <!-- <div class="spot-card">
+            <a href=""> -->
                 <!-- This is also a placeholder until backend implementation -->
-                <img class="spot-card-image" src="../images/simple-task-board.png"/>
+                <!-- <img class="spot-card-image" src="../images/simple-task-board.png"/>
                 <div class="study-card-name">Study Spot Name</div>
                 <div class="study-spot-location"><span class="material-symbols-outlined location-icon">location_on</span>Location</div>
             </a>
         </div>
         <div class="spot-card">
-            <a href="">
+            <a href=""> -->
                 <!-- This is also a placeholder until backend implementation -->
-                <img class="spot-card-image" src="../images/simple-task-board.png"/>
+                <!-- <img class="spot-card-image" src="../images/simple-task-board.png"/>
                 <div class="study-card-name">Study Spot Name</div>
                 <div class="study-spot-location"><span class="material-symbols-outlined location-icon">location_on</span>Location</div>
             </a>
         </div>
         <div class="spot-card">
-            <a href="">
+            <a href=""> -->
                 <!-- This is also a placeholder until backend implementation -->
-                <img class="spot-card-image" src="../images/simple-task-board.png"/>
+                <!-- <img class="spot-card-image" src="../images/simple-task-board.png"/>
                 <div class="study-card-name">Study Spot Name</div>
                 <div class="study-spot-location"><span class="material-symbols-outlined location-icon">location_on</span>Location</div>
             </a>
         </div>
         <div class="spot-card">
-            <a href="">
+            <a href=""> -->
                 <!-- This is also a placeholder until backend implementation -->
-                <img class="spot-card-image" src="../images/simple-task-board.png"/>
+                <!-- <img class="spot-card-image" src="../images/simple-task-board.png"/>
                 <div class="study-card-name">Study Spot Name</div>
                 <div class="study-spot-location"><span class="material-symbols-outlined location-icon">location_on</span>Location</div>
             </a>
-        </div>
-        <div class="spot-card">
-            <a href="">
+        </div> -->
+        <!-- <div class="spot-card">
+            <a href=""> -->
                 <!-- This is also a placeholder until backend implementation -->
-                <img class="spot-card-image" src="../images/simple-task-board.png"/>
+                <!-- <img class="spot-card-image" src="../images/simple-task-board.png"/>
                 <div class="study-card-name">Study Spot Name</div>
                 <div class="study-spot-location"><span class="material-symbols-outlined location-icon">location_on</span>Location</div>
             </a>
-        </div>
-        <div class="spot-card">
-            <a href="">
+        </div> -->
+        <!-- <div class="spot-card">
+            <a href=""> -->
                 <!-- This is also a placeholder until backend implementation -->
-                <img class="spot-card-image" src="../images/simple-task-board.png"/>
+                <!-- <img class="spot-card-image" src="../images/simple-task-board.png"/>
                 <div class="study-card-name">Study Spot Name</div>
                 <div class="study-spot-location"><span class="material-symbols-outlined location-icon">location_on</span>Location</div>
             </a>
-        </div>
-        <div class="spot-card">
-            <a href="">
-                <!-- This is also a placeholder until backend implementation -->
-                <img class="spot-card-image" src="../images/simple-task-board.png"/>
-                <div class="study-card-name">Study Spot Name</div>
-                <div class="study-spot-location"><span class="material-symbols-outlined location-icon">location_on</span>Location</div>
-            </a>
-        </div>
+        </div> -->
         <!-- This keeps the last spot card left aligned if it's alone in a new row -->
         <div class="card-placeholder"></div>
     </div>
