--- a/templates/detail.html
+++ b/templates/detail.html
@@ -7,100 +7,108 @@
 <head>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <title>Study Spot Detail </title>
+    <title>{{doc.name}}</title>
 </head>
 
 <body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
         crossorigin="anonymous"></script>
-    <h1>Name of the study Spot</h1>
-    <img src="../images/study-spot-800.jpeg" class="img-fluid" alt="...">
+    
+
+    <h1>{{doc.name}}</h1>
+    <img src="/static/images/study-spot-800.jpeg" class="img-fluid" alt="...">
     <div class="container text-left">
         <div class="row align-items-start">
             <div class="col">
-                ★★★★✩
-            </div>
-            <div class="col">
-
+                {{spotStar}}
             </div>
 
         </div>
         <div class="row align-items-center">
             <div class="col">
-                tags: quiet, crowd ...
+            {{doc.type}}, {{doc.location}}, <br>{{doc.noise_level}}, {{purchase}}
             </div>
         </div>
         <div class="row align-items-end">
             <div class="col">
-                📍 washington square park
+                📍 {{doc.address}}
+            </div>
+        </div>
+        <div class="row align-items-end">
+            <div class="col">
+                {{doc.description}}
             </div>
         </div>
     </div>
-    <div class="container text-center">
+    <br />
+    <div class="container text-left">
         <div class="row align-items-start">
-            <div class="col ">
-                <form action="home.html" method="get">
-                    <button class = "border border-1" name="addReview">add review</button> 
-                </form>  
+            <div class="col">
+             Write Review: 
             </div>
-            <div class="col ">
-                <form action="home.html" method="get">
-                    <button class = "border border-1" name="addTag">add tag</button> 
-                </form> 
+        </div>
+        <div class="row align-items-start">
+            <div class="col">
+                <form method="POST" action="{{ url_for('post_review')}}">
+                    <div class="row align-items-start">
+                    <div class="col-5">
+                       Star Rating: 
+                    </div>
+                    <div class="col-7">
+                        <div class="row align-items-start">
+                        <select name="star" id="star">
+                        <option value="1">★✩✩✩✩</option>
+                        <option value="2">★★✩✩✩</option>
+                        <option value="3">★★★✩✩</option>
+                        <option value="4">★★★★✩</option>
+                        <option value="5">★★★★★</option>
+                      </select>  
+                        </div>
+                     </div>
+                    </div>
+                    <div class="row align-items-start">
+                        
+                      <textarea type="text" id="reviewText" name="reviewText"></textarea>
+                      <input hidden name="SpotId" value= "{{doc['_id']}}"/>
+                      <input type="submit" name="create-btn" value="Post" />
+                        </div>
+
+                  </form>
             </div>
         </div>
 
     </div>
     Reviews: 
+
+    {% for review in reviews %}
+    
     <div class="container text-left border">
         <div class="row align-items-start">
             <div class="col">
-            ★★★★✩
+            {{reviewStar[loop.index0]}}
             </div>
-
         </div>
         <div class="row align-items-start">
             <div class="col">
-            review ajd skja sjk ksjanad kxjsbs
+            {{review.text}}
             </div>
         </div>
         <div class="row align-items-start">
             <div class="col-3">
-                <form action="" method="post">
-                    <button class = "border border-1" name="like" value="like">👍</button> 10
-                </form>  
+                <form action="{{ url_for('like_review')}}" method="post">
+                    <input hidden name="reviewId" value= "{{review['_id']}}"/>
+                    <button class = "border border-1" name="like" value="like">👍</button> {{review.like}}
             </div>
             <div class="col-3">
-                <form action="" method="post">
-                    <button class = "border border-1" name="like" value="like">👎</button> 2
-                </form>  
-                 
+                    <button class = "border border-1" name="like" value="dislike">👎</button> {{review.dislike}}
+                </form>       
             </div>
         </div>
     </div>
 
-    <div class="container text-left border">
-        <div class="row align-items-start">
-            <div class="col">
-            ★★★★✩
-            </div>
-
-        </div>
-        <div class="row align-items-start">
-            <div class="col">
-            review ajd skja sjk ksjanad kxjsbs
-            </div>
-        </div>
-        <div class="row align-items-start">
-            <div class="col-2">
-                👍 10
-            </div>
-            <div class="col-2">
-                👎 2
-            </div>
-        </div>
-    </div>
+    {%endfor%}
+    <br/>
 </body>
 
 </html>
