--- a/templates/home.html
+++ b/templates/home.html
@@ -7,9 +7,9 @@
     <div class="spot-grid-container">
         {% for doc in docs %}
             <div class="spot-card">
-                <a href="">
+                <a href="{{ url_for('detail', SpotId = doc['_id'])}}">
                     <!-- This is also a placeholder until backend implementation -->
-                    <img class="spot-card-image" src="../images/simple-task-board.png"/>
+                    <img class="spot-card-image" src="/static/images/study-spot-800.jpeg"/>
                     <div class="study-card-name">{{doc.name}}</div>
                     <div class="study-spot-location"><span class="material-symbols-outlined location-icon">location_on</span>{{doc.location}}</div>
                 </a>
