--- a/templates/wrapper.html
+++ b/templates/wrapper.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>App Name Here</title>
+    <title>NYU Study Spot</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link
