--- a/templates/detail_moderator.html
+++ b/templates/detail_moderator.html
@@ -1,98 +1,74 @@
-<!-- {% extends 'wrapper.html' %}
 
-{% block container %} -->
+{% extends "wrapper.html" %}
+{% block container %} 
 <!doctype html>
 <html lang="en">
 
 <head>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <title>Study Spot Detail</title>
+    <title>{{doc.name}}</title>
 </head>
 
 <body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
         crossorigin="anonymous"></script>
-    <h1>Name of the study Spot</h1>
-    <img src="../images/study-spot-800.jpeg" class="img-fluid" alt="...">
+    
+
+    <h1>{{doc.name}}</h1>
+    <img src="/static/images/study-spot-800.jpeg" class="img-fluid" alt="...">
     <div class="container text-left">
         <div class="row align-items-start">
-            <div class="col-5">
-                ★★★★✩
+            <div class="col">
+                {{spotStar}}
             </div>
-            <div class="col-7 ">
-                <form action="" method="post">
-                    <button name="remove" value="removeStudySpot">remove this study spot</button>
-                </form>
-            </div>
+
         </div>
         <div class="row align-items-center">
             <div class="col">
-                tags: quiet, crowd ...
+            {{doc.type}}, {{doc.location}}, <br>{{doc.noise_level}}, {{purchase}}
             </div>
         </div>
         <div class="row align-items-end">
             <div class="col">
-                📍 washington square park
+                📍 {{doc.address}}
+            </div>
+        </div>
+        <div class="row align-items-end">
+            <div class="col">
+                {{doc.description}}
             </div>
         </div>
     </div>
-    <div class="container text-center">
-        <div class="row align-items-start">
-            <div class="col border border-2">
-                add review
-            </div>
-            <div class="col border border-2">
-                add tag
-            </div>
-        </div>
 
-    </div>
     Reviews: 
+
+    {% for review in reviews %}
+    
     <div class="container text-left border">
         <div class="row align-items-start">
             <div class="col">
-            ★★★★✩
-            </div>
-
-        </div>
-        <div class="row align-items-start">
-            <div class="col">
-            review ajd skja sjk ksjanad kxjsbs
+            {{reviewStar[loop.index0]}}
             </div>
         </div>
         <div class="row align-items-start">
             <div class="col">
-                <form action="" method="post">
-                    <button name="remove" value="remove">remove</button>
-                </form>
+            {{review.text}}
+            </div>
+            <div class="col-3">
+                <form action="{{ url_for('delete_review')}}" method="post">
+                    <input hidden name="reviewId" value= "{{review['_id']}}"/>
+                    <button class = "border border-1" name="delete" value="delete"><span class="material-symbols-outlined location-icon">delete</span></button>
+                </form>       
             </div>
         </div>
     </div>
 
-    <div class="container text-left border">
-        <div class="row align-items-start">
-            <div class="col">
-            ★★★★✩
-            </div>
-
-        </div>
-        <div class="row align-items-start">
-            <div class="col">
-            review ajd skja sjk ksjanad kxjsbs
-            </div>
-        </div>
-        <div class="row align-items-start">
-            <div class="col">
-                <form action="" method="post">
-                    <button name="remove" value="remove">remove</button>
-                </form>
-            </div>
-        </div>
-    </div>
+    {%endfor%}
+    <br/>
 </body>
 
 </html>
 
-<!-- {% endblock %} -->
+{% endblock %}
