--- a/templates/moderator_home.html
+++ b/templates/moderator_home.html
@@ -1,74 +1,33 @@
 {% extends 'wrapper.html' %}
+
+{% block container %}
 <!-- These are placeholder links for now until backend implementation -->
 <link rel="stylesheet" href="../static/css/home.css"/>
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 <div class="home-container">
     <div class="spot-grid-container">
-        <div class="spot-card" onclick="location.href='';">
-            <!-- This is also a placeholder until backend implementation -->
-            <div class="image-container">
-                <img class="spot-card-image" src="https://via.placeholder.com/350"/>
-                <a class="spot-card-delete" href=""><span class="material-symbols-outlined location-icon">delete</span></a>
+        {% for doc in docs %}
+            <div class="spot-card">
+                <a href="{{ url_for('moderator_detail', SpotId = doc['_id'])}}">
+                    <!-- This is also a placeholder until backend implementation -->
+                    <img class="spot-card-image" src="/static/images/study-spot-800.jpeg"/>
+                    <form action="{{ url_for('delete_spot')}}" method="post">
+                        <input hidden name="SpotId" value= "{{doc['_id']}}"/>
+                        <button class = "border border-1" name="delete" value="delete"><span class="material-symbols-outlined location-icon">delete</span></button>
+                    </form>   
+                    <div class="study-card-name">{{doc.name}}</div>
+                    <div class="study-spot-location"><span class="material-symbols-outlined location-icon">location_on</span>{{doc.location}}</div>
+                </a>
             </div>
-            <div class="study-card-name">Study Spot Name</div>
-            <div class="study-spot-location"><span class="material-symbols-outlined location-icon">location_on</span>Location</div>
-        </div>
-        <div class="spot-card" onclick="location.href='';">
-            <!-- This is also a placeholder until backend implementation -->
-            <div class="image-container">
-                <img class="spot-card-image" src="https://via.placeholder.com/350"/>
-                <a class="spot-card-delete" href=""><span class="material-symbols-outlined location-icon">delete</span></a>
-            </div>
-            <div class="study-card-name">Study Spot Name</div>
-            <div class="study-spot-location"><span class="material-symbols-outlined location-icon">location_on</span>Location</div>
-        </div>
-        <div class="spot-card" onclick="location.href='';">
-            <!-- This is also a placeholder until backend implementation -->
-            <div class="image-container">
-                <img class="spot-card-image" src="https://via.placeholder.com/350"/>
-                <a class="spot-card-delete" href=""><span class="material-symbols-outlined location-icon">delete</span></a>
-            </div>
-            <div class="study-card-name">Study Spot Name</div>
-            <div class="study-spot-location"><span class="material-symbols-outlined location-icon">location_on</span>Location</div>
-        </div>
-        <div class="spot-card" onclick="location.href='';">
-            <!-- This is also a placeholder until backend implementation -->
-            <div class="image-container">
-                <img class="spot-card-image" src="https://via.placeholder.com/350"/>
-                <a class="spot-card-delete" href=""><span class="material-symbols-outlined location-icon">delete</span></a>
-            </div>
-            <div class="study-card-name">Study Spot Name</div>
-            <div class="study-spot-location"><span class="material-symbols-outlined location-icon">location_on</span>Location</div>
-        </div>
-        <div class="spot-card" onclick="location.href='';">
-            <!-- This is also a placeholder until backend implementation -->
-            <div class="image-container">
-                <img class="spot-card-image" src="https://via.placeholder.com/350"/>
-                <a class="spot-card-delete" href=""><span class="material-symbols-outlined location-icon">delete</span></a>
-            </div>
-            <div class="study-card-name">Study Spot Name</div>
-            <div class="study-spot-location"><span class="material-symbols-outlined location-icon">location_on</span>Location</div>
-        </div>
-        <div class="spot-card" onclick="location.href='';">
-            <!-- This is also a placeholder until backend implementation -->
-            <div class="image-container">
-                <img class="spot-card-image" src="https://via.placeholder.com/350"/>
-                <a class="spot-card-delete" href=""><span class="material-symbols-outlined location-icon">delete</span></a>
-            </div>
-            <div class="study-card-name">Study Spot Name</div>
-            <div class="study-spot-location"><span class="material-symbols-outlined location-icon">location_on</span>Location</div>
-        </div>
-        <div class="spot-card" onclick="location.href='';">
-            <!-- This is also a placeholder until backend implementation -->
-            <div class="image-container">
-                <img class="spot-card-image" src="https://via.placeholder.com/350"/>
-                <a class="spot-card-delete" href=""><span class="material-symbols-outlined location-icon">delete</span></a>
-            </div>
-            <div class="study-card-name">Study Spot Name</div>
-            <div class="study-spot-location"><span class="material-symbols-outlined location-icon">location_on</span>Location</div>
-        </div>
+        {%endfor%}
         <!-- This keeps the last spot card left aligned if it's alone in a new row -->
         <div class="card-placeholder"></div>
     </div>
 </div>
-{% block container %}
+{% endblock %}
+
+<!-- These are placeholder links for now until backend implementation -->
+<!--
+    
+-->
+
