added extra "---" option

--- a/templates/search_page.html
+++ b/templates/search_page.html
@@ -16,6 +16,7 @@
         <input type="text" id = "fspotname" name = "fspotname" placeholder="Enter keyword">
         Location:
         <select name="flocation" id="flocation">
+          <option value='---'>---</option>
           <option value="On campus">On Campus</option>
           <option value="Off campus">Off Campus</option>
         </select>
@@ -30,11 +31,13 @@
         </select>
         Requires Purchase:
         <select name="fpurchase" id="fpurchase">
+          <option value='---'>---</option>
           <option value="Yes">Yes</option>
           <option value="No">No</option>
         </select>
         Noise Level:
         <select name="fnoise" id="fnoise">
+          <option value='---'>---</option>
           <option value="Silent">Silent</option>
           <option value="Quiet">Quiet</option>
           <option value="Conversational">Conversational</option>
