--- a/templates/moderator_home.html
+++ b/templates/moderator_home.html
@@ -8,7 +8,7 @@
     <div class="spot-grid-container">
         {% for doc in docs %}
             <div class="spot-card">
-                <a href="{{ url_for('moderator_detail', SpotId = doc['_id'])}}">
+                <a href="{{ url_for('moderator_detail', SpotId = doc['_id'])}}"> | <a href="{{ url_for('edit_s',mongoid=doc._id)}}">Edit</a>
                     <!-- This is also a placeholder until backend implementation -->
                     <img class="spot-card-image" src="/static/images/study-spot-800.jpeg"/>
                     <form action="{{ url_for('delete_spot')}}" method="post">
