--- a/static/css/search_page.css
+++ b/static/css/search_page.css
@@ -11,7 +11,7 @@ background: #d7bfdc;
 
 }
 
-.container{
+.form-container{
 width: 100%;
 height: 100vh;
 display: flex;
@@ -23,7 +23,9 @@ form{
 background-color: white;
 height: 55px;
 display: flex;
-
+flex-wrap: wrap;
+margin: 0 5%;
+gap: 20px;
 }
 
 form input{
@@ -32,6 +34,10 @@ border: none;
 outline: none;
 padding: 10px;
 box-shadow: 0 2px 25px rgba(0, 0, 0, 0.2);
+}
+
+form select{
+    flex: 1;
 }
 
 form button{
