--- a/templates/search_page.html
+++ b/templates/search_page.html
@@ -15,14 +15,14 @@
         Name:
         <input type="text" id = "fspotname" name = "fspotname" placeholder="Enter keyword">
         Location:
-        <select name="flocation" id="flocation">
-          <option value='---'>---</option>
+        <select name="flocation" id="flocation" value="">
+          <option value=""></option>
           <option value="On campus">On Campus</option>
           <option value="Off campus">Off Campus</option>
         </select>
         Type:
-        <select name="ftype" id="ftype">
-          <option value='---'>---</option>
+        <select name="ftype" id="ftype" value="">
+          <option value=""></option>
           <option value="Academic building">Academic Building</option>
           <option value="Cafe/Restaurant">Cafe/Restaurant</option>
           <option value="Library">Library</option>
@@ -30,14 +30,14 @@
           <option value="Miscellaneous">Miscellaneous</option>
         </select>
         Requires Purchase:
-        <select name="fpurchase" id="fpurchase">
-          <option value='---'>---</option>
+        <select name="fpurchase" id="fpurchase" value="">
+          <option value=""></option>
           <option value="Yes">Yes</option>
           <option value="No">No</option>
         </select>
         Noise Level:
-        <select name="fnoise" id="fnoise">
-          <option value='---'>---</option>
+        <select name="fnoise" id="fnoise" value="">
+          <option value=""></option>
           <option value="Silent">Silent</option>
           <option value="Quiet">Quiet</option>
           <option value="Conversational">Conversational</option>
