try adding user authentication

--- a/templates/moderator_login.html
+++ b/templates/moderator_login.html
@@ -27,6 +27,9 @@
     <div class="action">
       <button>Sign in</button>
     </div>
+    <div class="action">
+      <button>Sign Up</button>
+    </div>
   </form>
 </div>
 </body>
