--- a/templates/moderator_login.html
+++ b/templates/moderator_login.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 <div class="login">
-  <form method="POST" action="{{ url_for('moderator_authenticate')}}">
+  <form method="POST">
     <h1>Welcome Moderator!</h1>
     <h2>Please login</h2>
     <div class="content">
@@ -25,10 +25,10 @@
       <div class="input-field">
         <input type="password" placeholder="Password" name = "fpassword">
     <div class="action">
-      <button>Sign in</button>
+      <button type = "submit" formaction="{{ url_for('login_submit')}}">Log in</button>
     </div>
     <div class="action">
-      <button>Sign Up</button>
+      <button type = "submit" formaction="{{ url_for('signup_submit')}}">Sign Up</button>
     </div>
   </form>
 </div>
