--- a/templates/wrapper.html
+++ b/templates/wrapper.html
@@ -20,7 +20,7 @@
               <a class="nav-link" href="{{ url_for('home')}}">
                 <h1>NYU Study Spots</h1>
               </a>
-              <a class="nav-link" href="{{ url_for('moderator_login')}}">
+              <a class="nav-link" href="{{ url_for('logout')}}">
                 <span class="material-symbols-outlined nav-icon">login</span>
               </a>
             </div>
