add costume message to log in page

--- a/templates/moderator_login.html
+++ b/templates/moderator_login.html
@@ -16,7 +16,7 @@
 <body>
 <div class="login">
   <form method="POST">
-    <h1>Welcome Moderator!</h1>
+    <h1>{{message}}</h1>
     <h2>Please login</h2>
     <div class="content">
       <div class="input-field">
