fixed bugs and added user field to review docs

--- a/templates/detail.html
+++ b/templates/detail.html
@@ -87,7 +87,7 @@ Reviews:
     </div>
     <div class="row align-items-start">
         <div class="col">
-        {{review.text}}
+        <strong>{{review.user}}</strong> {{review.text}}
         </div>
     </div>
     <div class="row align-items-start">
