--- a/templates/moderator_login.html
+++ b/templates/moderator_login.html
@@ -16,8 +16,8 @@
 <body>
 <div class="login">
   <form method="POST">
-    <h1>{{message}}</h1>
-    <h2>Please login</h2>
+    <h1>Welcome!</h1>
+    <h2>{{message}}</h2>
     <div class="content">
       <div class="input-field">
         <input type="username" placeholder="Username" name = "fusername">
