display who added spot in the spot details

--- a/templates/detail.html
+++ b/templates/detail.html
@@ -36,6 +36,11 @@
             {{doc.description}}
         </div>
     </div>
+    <div class="row align-items-end">
+        <div class="col">
+            <strong>Added by: </strong>{{doc.added_by}}
+        </div>
+    </div>
 </div>
 <br />
 <div class="container text-left">
