--- a/templates/moderator_home.html
+++ b/templates/moderator_home.html
@@ -7,21 +7,20 @@
 <div class="home-container">
     <div class="spot-grid-container">
         {% for doc in docs %}
-            <div class="spot-card">
-                <a href="{{ url_for('moderator_detail', SpotId = doc['_id'])}}"> | <a href="{{ url_for('edit_s',mongoid=doc._id)}}">Edit Spot</a> 
-                    <!-- This is also a placeholder until backend implementation -->
-                    {% if doc.image and doc.image != '' %}
-                    <img class="spot-card-image" src="/static/images/uploads/{{doc.image}}"/>
-                    {% else %}
-                    <img class="spot-card-image" src="/static/images/study-spot-800.jpeg"/>
-                    {% endif %}
-                    <form action="{{ url_for('delete_spot')}}" method="post">
-                        <input hidden name="SpotId" value= "{{doc['_id']}}"/>
-                        <button class = "border border-1" name="delete" value="delete"><span class="material-symbols-outlined location-icon">delete</span></button>
-                    </form>   
-                    <div class="study-card-name">{{doc.name}}</div>
-                    <div class="study-spot-location"><span class="material-symbols-outlined location-icon">location_on</span>{{doc.location}}</div>
-                </a>
+            <div class="spot-card" onclick="window.location='{{ url_for('moderator_detail', SpotId = doc['_id'])}}';">
+                        <a href="{{ url_for('edit_s',mongoid=doc._id)}}">Edit Spot</a> 
+                        <!-- This is also a placeholder until backend implementation -->
+                        {% if doc.image and doc.image != '' %}
+                        <img class="spot-card-image" src="/static/images/uploads/{{doc.image}}"/>
+                        {% else %}
+                        <img class="spot-card-image" src="/static/images/study-spot-800.jpeg"/>
+                        {% endif %}
+                        <form action="{{ url_for('delete_spot')}}" method="post">
+                            <input hidden name="SpotId" value= "{{doc['_id']}}"/>
+                            <button class = "border border-1" name="delete" value="delete"><span class="material-symbols-outlined location-icon">delete</span></button>
+                        </form>   
+                        <div class="study-card-name">{{doc.name}}</div>
+                        <div class="study-spot-location"><span class="material-symbols-outlined location-icon">location_on</span>{{doc.location}}</div>
             </div>
         {%endfor%}
         <!-- This keeps the last spot card left aligned if it's alone in a new row -->
