--- a/static/css/search_page.css
+++ b/static/css/search_page.css
@@ -25,7 +25,12 @@ height: 55px;
 display: flex;
 flex-wrap: wrap;
 margin: 0 5%;
-gap: 20px;
+gap: 15px;
+}
+
+.break {
+    flex-basis: 100%;
+    height: 0;
 }
 
 form input{
@@ -41,6 +46,7 @@ form select{
 }
 
 form button{
+flex: 1;
 background: purple;
 padding: 10px;
 border: none; 
