--- a/templates/search_page.html
+++ b/templates/search_page.html
@@ -13,6 +13,7 @@
       <form method="POST" action="{{ url_for('search')}}">
         <i class="fa-solid fa-magnifying-glass"></i>
         <input type="text" id = "fspotname" name = "fspotname" placeholder="Enter keyword">
+        <div class="break"></div>
         Location:
         <select name="flocation" id="flocation" value="">
           <option value=""></option>
