--- a/templates/edit_spot.html
+++ b/templates/edit_spot.html
@@ -41,7 +41,7 @@
     </p>
     <p>
       Description/Notes:<br />
-      <textarea type="text" id="fdescription" name="fdescription" value="{{doc.description}}"></textarea>
+      <textarea type="text" id="fdescription" name="fdescription" value="{{doc.description}}">{{doc.description}}</textarea>
     </p>
     <p>
       <input type="submit" name="edit-btn" value="Update" />
