--- a/templates/search_page.html
+++ b/templates/search_page.html
@@ -14,14 +14,14 @@
         <i class="fa-solid fa-magnifying-glass"></i>
         <input type="text" id = "fspotname" name = "fspotname" placeholder="Enter keyword">
         <div class="break"></div>
-        <!-- Location:
+        Location:
         <select name="flocation" id="flocation" value="">
           <option value=""></option>
           <option value="On campus">On Campus</option>
           <option value="Off campus">Off Campus</option>
         </select>
         <div class="break"></div>
-        Type: -->
+        Type:
         <select name="ftype" id="ftype" value="">
           <option value=""></option>
           <option value="---">---</option>
@@ -31,23 +31,6 @@
           <option value="Non-restaurant store">Non-Restaurant Store</option>
           <option value="Miscellaneous">Miscellaneous</option>
         </select>
-        <!-- <div class="break"></div>
-        Requires Purchase:
-        <select name="fpurchase" id="fpurchase" value="">
-          <option value=""></option>
-          <option value="Yes">Yes</option>
-          <option value="No">No</option>
-        </select>
-        <div class="break"></div>
-        Noise Level:
-        <select name="fnoise" id="fnoise" value="">
-          <option value=""></option>
-          <option value="Silent">Silent</option>
-          <option value="Quiet">Quiet</option>
-          <option value="Conversational">Conversational</option>
-          <option value="Loud">Loud</option>
-        </select>
-        <div class="break"></div> -->
         <button type="submit">Search</button>
       </form>
     </div>
