--- a/templates/moderator_home.html
+++ b/templates/moderator_home.html
@@ -3,6 +3,7 @@
 {% block container %}
 <!-- These are placeholder links for now until backend implementation -->
 <link rel="stylesheet" href="../static/css/home.css"/>
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Abel">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 <div class="home-container">
     <div class="spot-grid-container">
