--- a/templates/post_review.html
+++ b/templates/post_review.html
@@ -5,6 +5,7 @@
 <html>
   <head>
     <title>Write review for {{name}}</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Abel">
     <link
       rel="stylesheet"
       href="{{ url_for('static', filename='css/wrapper.css') }}"
