--- a/templates/search_page.html
+++ b/templates/search_page.html
@@ -5,6 +5,7 @@
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Abel">
     <link href="../static/css/search_page.css" href="{{ url_for('static', filename='css/search_page.css') }}" rel="stylesheet" />
     <script src="https://kit.fontawesome.com/126efe61ad.js" crossorigin="anonymous"></script>
   </head>
