change placeholder text for search

--- a/templates/search_page.html
+++ b/templates/search_page.html
@@ -13,7 +13,7 @@
     <div class="container">
       <form method="POST" action="{{ url_for('search')}}">
         <i class="fa-solid fa-magnifying-glass"></i>
-        <input type="text" id = "fspotname" name = "fspotname" placeholder="Enter keyword">
+        <input type="text" id = "fspotname" name = "fspotname" placeholder="Enter spot name">
         <!-- <div class="break"></div>
         Location:
         <select name="flocation" id="flocation" value="">
